# ClickHouse

./: .gitmodules
contrib/: CMakeLists.txt
contrib/paimon-cpp-cmake/: CMakeLists.txt  paimon_cpp_stub.cpp
docs/en/engines/table-engines/integrations/: paimon.md
docs/en/sql-reference/table-functions/: paimon.md  paimonCluster.md
src/: CMakeLists.txt  configure_config.cmake
src/Common/: CurrentMetrics.cpp  ProfileEvents.cpp  config.h.in
src/Core/: Settings.cpp  SettingsChangesHistory.cpp  SettingsEnums.cpp  SettingsEnums.h
src/Storages/Kafka/: KafkaConfigLoader.cpp  KafkaConfigLoader.h  KafkaSettings.cpp  KafkaSettings.h  StorageKafka.cpp  StorageKafka.h  StorageKafka2.cpp  StorageKafka2.h  StorageKafkaUtils.cpp
src/Storages/ObjectStorage/: StorageObjectStorage.cpp  StorageObjectStorageConfiguration.h  StorageObjectStorageDefinitions.h  Utils.cpp  registerStorageObjectStorage.cpp
src/Storages/ObjectStorage/DataLakes/: DataLakeConfiguration.h  DataLakeStorageSettings.h  DataLakeTableStateSnapshot.h
src/Storages/ObjectStorage/DataLakes/Paimon/: PaimonArrowBridge.cpp  PaimonArrowBridge.h  PaimonClient.h  PaimonMetadata.cpp  PaimonMetadata.h  PaimonMetadataCache.h  PaimonPersistentComponents.h  PaimonPredicateConverter.cpp  PaimonPredicateConverter.h  PaimonSDKFileSystem.cpp  PaimonSDKFileSystem.h  PaimonSDKSource.cpp  PaimonSDKSource.h  PaimonSchemaProcessor.cpp  PaimonSchemaProcessor.h  PaimonStreamState.cpp  PaimonStreamState.h  PaimonTableState.cpp  PaimonTableState.h  PaimonTableStateSnapshot.cpp  ReadFromPaimonSDKStep.cpp  ReadFromPaimonSDKStep.h
tests/integration/test_paimon_incremental_read/: README.md  test.py
tests/queries/0_stateless/: 02995_settings_25_12_1.tsv  03775_paimon_all_supported_type_storage.reference  03775_paimon_incremental_read.sql  03775_paimon_target_snapshot.sql
